Service Layer Constructor Injection

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         {
             "name": "bhsong"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^11.5"
+    }
 }
